			   XPCE ChangeLog
			   ==============

* FIXED: filter-name in Unix file-dialog when using tuple(Name, Ext)

* ENHANCED: PceEmacs help-page on Prolog Mode.  Martin Sondergaard.

* FIXED: X11 version: make filling monochrome context with colour-images
  work (Anjo Anjewierden).

* FIXED: `finder->label' compatibility.

* FIXED: Missing ws_unlink_colour_map() in X11 version.  Paulo Moura.

VERSION 6.0.7, distributed with SWI-Prolog 5.0.7
================================================

* COMPAT: X11 file-finder: allow again for specifying extensions as .xyz
  
* FIXED: Improved compatibility of X11 selection-handling.  Works again
  with recent Qt versions which demanded the obligatory `targets' target.

* FIXED: Win32: Loading X11 .BM files (broken due with new DIB-based jpeg
  loading).

* ADDED: `segment' argument to `line<-distance' to compute the distance
  from a point to the line-segment.

* FIXED: `path<-distance' (yielding wrong result).

* ENHANCED: Subwindow layout adjustment if actual resizing the windows is
  slow.

* ENHANCED: Windows: JPEG bitmap loading to use a more direct
  approach through DIB.  A similar approach was already in the X11 version
  for some time.

* MODIFIED: Windows: by default we now use the Netscape 216 colour
  colour-cupe as read-only colour-map on 8-bit displays.  This provides
  better reproducable and generally better results.

* ADDED: `image<-rotate' now accepts a float rather then an integer (conversion
  ensures compatibility, though fractional arguments are no longer rounded to
  the nearest integer.

* COMPAT: re-added `finder->directory' (Bob Wielinga).

* FIXED: Completion (TAB) in file_item (library(pce_file_item)).

* FIXED: `graphical->draw_image': correctly handle non-square images.

* MODIFIED: PceEmacs command "M-x insert_date" to insert just the date, not
  the time.


VERSION 6.0.6, distributed with SWI-Prolog 5.0.6
================================================
