@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: Removed some traces of pre-iso SWI-Prolog concat/3 (replaced
+  with atom_concat/3).  Martin Sondergaard.
+
 * FIXED: filter-name in Unix file-dialog when using tuple(Name, Ext)
 
 * ENHANCED: PceEmacs help-page on Prolog Mode.  Martin Sondergaard.
